engine/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: camunda-bpm
spec:
  rules: {}
  tls: {}
